Improve performance of Gradle html report task dependencies
Workaround dependencies created by the multi-module test reports creating issues with Gradle 7.6+ task configuration/finalization based on suggestion at https://github.com/gradle/gradle/issues/25361#issuecomment-1593675299

Seems to cause no ill side effects. To review these dependencies later.

--- a/build.gradle
+++ b/build.gradle
@@ -644,8 +644,8 @@ task sparkTest { thisTask ->
 task sparkTestJunitHtmlReport(type: TestReport) {
   dependsOn sparkTest
 
-  testResults.from(project(':api').subprojects*.test)
-  testResults.from(project(':spark').subprojects*.test)
+  testResults.from(project(':api').subprojects*.test.binaryResultsDirectory.locationOnly)
+  testResults.from(project(':spark').subprojects*.test.binaryResultsDirectory.locationOnly)
   destinationDirectory = file("${project.buildDir}/reports/tests/sparkTest")
 }
 
@@ -679,7 +679,7 @@ task allTestsJunitHtmlReport(type: TestReport) { TestReport thisTask ->
   description = "Run all api tests"
 
   forAllTask { Test eachTestTask ->
-    testResults.from(eachTestTask)
+    testResults.from(eachTestTask.binaryResultsDirectory.locationOnly)
     eachTestTask.finalizedBy(thisTask)
   }
   destinationDirectory = file("${project.buildDir}/reports/tests/allTests")
