Remove unnecessary runtime dependencies
Guava declares it only needs `failureaccess` but there are some limitations in the Gradle metadata that will be fixed at somepoint. Similar issue with use of `checker-qual` within the postgresql library.

--- a/db-support/db-support-postgresql/build.gradle
+++ b/db-support/db-support-postgresql/build.gradle
@@ -20,7 +20,9 @@ configurations.all {
 }
 
 dependencies {
-  implementation project.deps.postgresql
+  implementation(project.deps.postgresql) {
+    exclude(module: 'checker-qual') // See https://github.com/pgjdbc/pgjdbc/pull/2262
+  }
   api project(path: ':db-support:db-support-base', configuration: 'runtimeElements')
 
   annotationProcessor project.deps.lombok
