--- a/build.gradle
+++ b/build.gradle
@@ -389,6 +389,17 @@ subprojects {
         // workaround for dom4j Gradle metadata optional dependency issues to avoid it pulling in
         // optional dependencies when it should not (https://github.com/dom4j/dom4j/issues/99)
         withModule('org.dom4j:dom4j', { details -> details.allVariants { withDependencies { clear() } } })
+        // workaround for Guava metadata declaring dependencies that are not needed at runtime
+        // see https://github.com/google/guava/pull/6606
+        withModule('com.google.guava:guava', { details ->
+          details.allVariants {
+            withDependencies {
+              removeAll {
+                it.group in [ "com.google.code.findbugs", "org.checkerframework", "com.google.errorprone" ]
+              }
+            }
+          }
+        })
       }
     }
   }
