Avoid relying on convention properties

--- a/installers/build.gradle
+++ b/installers/build.gradle
@@ -38,7 +38,7 @@ dependencies {
 
 task versionFile {
   outputs.upToDateWhen { false }
-  def versionFile = file("${project.buildDir}/${project.distsDirName}/meta/version.json")
+  def versionFile = file("${project.buildDir}/${project.base.distsDirName}/meta/version.json")
 
   inputs.property('goVersion', rootProject.goVersion)
   inputs.property('distVersion', rootProject.distVersion)
