--- a/installers/release-notes.gradle
+++ b/installers/release-notes.gradle
@@ -23,8 +23,8 @@ import java.util.regex.Pattern
 task releaseNotes {
   outputs.upToDateWhen { false }
 
-  def releaseNotesMarkdownFile = file("${project.buildDir.path}/${project.distsDirName}/meta/release-notes.md")
-  def releaseNotesHTMLFile = file("${project.buildDir.path}/${project.distsDirName}/meta/release-notes.html")
+  def releaseNotesMarkdownFile = file("${project.buildDir.path}/${project.base.distsDirName}/meta/release-notes.md")
+  def releaseNotesHTMLFile = file("${project.buildDir.path}/${project.base.distsDirName}/meta/release-notes.html")
 
   inputs.property('goVersion', rootProject.goVersion)
   inputs.property('distVersion', rootProject.distVersion)
