--- a/tw-go-plugins/build.gradle
+++ b/tw-go-plugins/build.gradle
@@ -41,9 +41,9 @@ def dependencies = [
   new GithubArtifact(
     user: 'tomzo',
     repo: 'gocd-yaml-config-plugin',
-    tagName: '0.14.1',
-    asset: 'yaml-config-plugin-0.14.1.jar',
-    checksum: '3d3a896a5b031f05467d095e42af4a665221fa7c09106acfe3fdb532499babbb'
+    tagName: '0.14.2-305',
+    asset: 'yaml-config-plugin-0.14.2-305.jar',
+    checksum: 'b48951ac8044fa86736cfe3d3e26e0b87940b68bbbb8d6da310fb3ec76c19136'
   ),
   new GithubArtifact(
     user: 'tomzo',
