Tidy linting roles to match as much as possible
Fix indenting rules on newer code

--- a/server/src/main/webapp/WEB-INF/rails/.eslintrc.json
+++ b/server/src/main/webapp/WEB-INF/rails/.eslintrc.json
@@ -7,7 +7,8 @@
   "env": {
     "browser": true,
     "amd": true,
-    "es6": true
+    "es2018": true,
+    "jasmine": true
   },
   "plugins": [
     "react"
@@ -20,22 +21,10 @@
     }
   },
   "globals": {
-    "it": true,
-    "describe": true,
-    "xdescribe": true,
-    "expect": true,
-    "beforeEach": true,
-    "afterEach": true,
-    "afterAll": true,
-    "beforeAll": true,
-    "xit": true,
-    "spyOn": true,
-    "jasmine": true,
     "angular": true,
     "module": true
   },
   "parserOptions": {
-    "ecmaVersion": 6,
     "ecmaFeatures": {
       "jsx": true
     }
@@ -75,14 +64,9 @@
     "eol-last": [
       "error"
     ],
-    "indent": [
-      "off",
-      {
-        "indent-legacy": [
-          "error",
-          2
-        ]
-      }
+    "indent-legacy": [
+      "error",
+      2
     ],
     "eqeqeq": [
       "error",
