Correct guava exclusions for unnecessary runtime dependencies
Guava folks reverted a change for listenablefuture in https://github.com/google/guava/releases/tag/v32.1.2 via https://github.com/google/guava/commit/9ed0fa65ab0ecdf2f10d506e7dffeb3595953777 so need to exclude this manually for now.

--- a/build.gradle
+++ b/build.gradle
@@ -399,7 +399,7 @@ subprojects {
           details.allVariants {
             withDependencies {
               removeAll {
-                it.group in [ "com.google.code.findbugs", "org.checkerframework", "com.google.errorprone" ]
+                it.name in [ "jsr305", "checker-qual", "error_prone_annotations", "listenablefuture" ]
               }
             }
           }
