Migrate Yarn from v1.x to v3.x

--- a/build.gradle
+++ b/build.gradle
@@ -183,6 +183,7 @@ dependencyCheck {
 
   analyzers {
     bundleAuditEnabled = false // Currently there is a separate bundle audit security check job independent of Gradle
+    nodeAudit.yarnEnabled = false // Doesn't work correctly with Yarn 3+ https://github.com/jeremylong/DependencyCheck/issues/4894
     assemblyEnabled = false
     retirejs {
       filterNonVulnerable = true
