Fix use of deprecated Gradle APIs

--- a/server/build.gradle
+++ b/server/build.gradle
@@ -18,10 +18,10 @@
 import com.github.jk1.license.task.ReportTask
 import com.thoughtworks.go.build.ExecuteUnderRailsTask
 import com.thoughtworks.go.build.LicenseReport
+import com.thoughtworks.go.build.TextUtils
 import com.thoughtworks.go.build.VerifyJarTask
 import groovy.json.JsonSlurper
 import org.eclipse.jgit.api.Git
-import org.gradle.util.TextUtil
 
 import static org.jruby.runtime.Constants.RUBY_MAJOR_VERSION
 
@@ -607,9 +607,9 @@ tasks.withType(Test) {
 
   onOutput { TestDescriptor descriptor, TestOutputEvent event ->
     if (event.destination == TestOutputEvent.Destination.StdOut) {
-      logger.quiet(TextUtil.toPlatformLineSeparators(TextUtil.indent(event.getMessage(), "  OUT: ")))
+      logger.quiet(TextUtils.toPlatformLineSeparators(TextUtils.indent(event.getMessage(), "  OUT: ")))
     } else if (event.destination == TestOutputEvent.Destination.StdErr) {
-      logger.quiet(TextUtil.toPlatformLineSeparators(TextUtil.indent(event.getMessage(), "  ERR: ")))
+      logger.quiet(TextUtils.toPlatformLineSeparators(TextUtils.indent(event.getMessage(), "  ERR: ")))
     }
   }
 }
