Ensure line endings are treated consistently across OSes
Currently Windows is trying to normalize line endings to CRLF by default which causes some test failures
as well as issues with Yarn 2+ and its checksums/hashes for locally vendored dependencies.

--- a/common/src/test/resources/data/.gitattributes
+++ b/common/src/test/resources/data/.gitattributes
@@ -1,2 +1,3 @@
-git/** linguist-vendored
-*repo*/** linguist-vendored
+# SCM repositories in various formats for testing (git, SVN, Perforce)
+git/**          binary linguist-vendored
+*repo*/**       binary linguist-vendored
