--- a/settings.gradle
+++ b/settings.gradle
@@ -116,7 +116,7 @@ include ':development-utility:development-server'
 include ':domain'
 include ':installers'
 include ':jar-class-loader'
-include ':jetty9'
+include ':jetty'
 include ':plugin-infra:go-plugin-access'
 include ':plugin-infra:go-plugin-activator'
 include ':plugin-infra:go-plugin-api'
