--- a/.gitignore
+++ b/.gitignore
@@ -220,9 +220,9 @@ domain/target/
 installers/target/
 jar-class-loader/out/
 jar-class-loader/target/
-jetty9/logs/
-jetty9/out/
-jetty9/target/
+jetty/logs/
+jetty/out/
+jetty/target/
 plugin-infra/go-plugin-access/config/
 plugin-infra/go-plugin-access/logs/
 plugin-infra/go-plugin-access/out/
