--- a/server-launcher/build.gradle
+++ b/server-launcher/build.gradle
@@ -44,6 +44,8 @@ configurations {
 }
 
 dependencies {
+  packagingInLibDir platform(project(':build-platform'))
+
   packagingInDefaultFilesDir project(path: ':agent-launcher', configuration: 'fatJarConfig')
   packagingInDefaultFilesDir project(path: ':agent', configuration: 'fatJarConfig')
   packagingInDefaultFilesDir project(path: ':server', configuration: 'warConfig')
@@ -56,7 +58,9 @@ dependencies {
   packagingInLibDir project.deps.jettyServlets
   packagingInLibDir project.deps.jettyUtil
   packagingInLibDir project.deps.jettyDeploy
-  packagingInLibDir project.deps.jettyWebsocket
+  packagingInLibDir(project.deps.jettyWebsocket) {
+    exclude(module: 'jetty-annotations')
+  }
 
   packagingInLibDir(project(path: ':plugin-infra:go-plugin-activator')) {
     transitive = false
@@ -76,7 +80,7 @@ dependencies {
 
   pluginsZip project(path: ':tw-go-plugins', configuration: 'pluginsZipConfig')
 
-  packagingInMainJarTopLevel project(path: ':jetty9', configuration: 'runtimeElements')
+  packagingInMainJarTopLevel project(path: ':jetty', configuration: 'runtimeElements')
   packagingInMainJarTopLevel project(path: ':app-server', configuration: 'runtimeElements')
   packagingInMainJarCommonJar project(path: ':common', configuration: 'runtimeElements')
   packagingInMainJarBaseJar project(path: ':base', configuration: 'runtimeElements')
@@ -208,8 +212,6 @@ task verifyFatJar(type: VerifyJarTask) {
       "go-plugin-activator.jar",
       "jakarta.servlet-api-${project.versions.servletApi}.jar",
       "jcl-over-slf4j-${project.versions.slf4j}.jar",
-      "jetty-client-${project.versions.jetty}.jar",
-      "jetty-continuation-${project.versions.jetty}.jar",
       "jetty-deploy-${project.versions.jetty}.jar",
       "jetty-http-${project.versions.jetty}.jar",
       "jetty-io-${project.versions.jetty}.jar",
@@ -219,7 +221,6 @@ task verifyFatJar(type: VerifyJarTask) {
       "jetty-servlet-${project.versions.jetty}.jar",
       "jetty-servlets-${project.versions.jetty}.jar",
       "jetty-util-${project.versions.jetty}.jar",
-      "jetty-util-ajax-${project.versions.jetty}.jar",
       "jetty-webapp-${project.versions.jetty}.jar",
       "jetty-xml-${project.versions.jetty}.jar",
       "joda-time-${project.versions.jodaTime}.jar",
@@ -230,10 +231,11 @@ task verifyFatJar(type: VerifyJarTask) {
       "server-launcher-${project.version}-main.jar",
       "slf4j-api-${project.versions.slf4j}.jar",
       "tfs-impl-14.jar",
-      "websocket-api-${project.versions.jetty}.jar",
-      "websocket-client-${project.versions.jetty}.jar",
-      "websocket-common-${project.versions.jetty}.jar",
-      "websocket-server-${project.versions.jetty}.jar",
+      "websocket-core-common-${project.versions.jetty}.jar",
+      "websocket-core-server-${project.versions.jetty}.jar",
+      "websocket-jetty-api-${project.versions.jetty}.jar",
+      "websocket-jetty-common-${project.versions.jetty}.jar",
+      "websocket-jetty-server-${project.versions.jetty}.jar",
       "websocket-servlet-${project.versions.jetty}.jar",
     ]
   ]
