Correct agent connectivity with mTLS and arbitrary agent-side private key formats
A regression was introduced in GoCD 23.2.0 with configuration of BouncyCastle to allow correct parsing of arbitrary private key PEM files
of various formats due to absence of tests for this configuration.

--- a/base/build.gradle
+++ b/base/build.gradle
@@ -34,6 +34,8 @@ dependencies {
   compileOnly project.deps.jetBrainsAnnotations
 
   testRuntimeOnly project.deps.bouncyCastle
+  testRuntimeOnly project.deps.bouncyCastlePkix
+  testImplementation project(path: ':test:test-utils', configuration: 'runtimeElements')
   testImplementation project.deps.junit5Api
   testRuntimeOnly project.deps.junit5Engine
   testImplementation project.deps.systemStubs
