Remove unnecesary forced commonsIO downgrade
This is no longer required, since we are on latest commonsIO, so this simplifies the rules to remove.

--- a/build-platform/build.gradle
+++ b/build-platform/build.gradle
@@ -19,12 +19,7 @@ dependencies {
   constraints {
     api project.deps.angusActivation
     api project.deps.commonsCodec
-    api('commons-io:commons-io') {
-      version {
-        // Prevent early upgrade from transitive dependencies (e.g. commons-fileupload)
-        strictly(project.versions.commonsIO as String)
-      }
-    }
+    api project.deps.commonsIO
     api project.deps.commonsPool
     api project.deps.commonsCollections
     api project.deps.guava
