--- a/server/src/main/webapp/WEB-INF/web.xml
+++ b/server/src/main/webapp/WEB-INF/web.xml
@@ -99,6 +99,15 @@
     <param-value>1</param-value>
   </context-param>
 
+  <!-- jruby rack will buffer the output stream in memory, before it writes to disk.
+  This writing to disk and then sending the contents over an http socket can cause significant performance overhead
+  so we increase the buffer limit to 30mb.
+  See org.jruby.rack.servlet.RewindableInputStream -->
+  <context-param>
+    <param-name>jruby.rack.request.size.maximum.bytes</param-name>
+    <param-value>30000000</param-value>
+  </context-param>
+
   <!-- DelegatingServlet below loads this servlet and delegates to it, the source is in PROJECT_ROOT/rack_hack. Default ant task for this project runs tests, packages a jar, and deploys to the correct localivy directory(it always overwrites becuase there is no version) -->
   <context-param>
     <param-name>delegate.servlet.name</param-name>
