--- a/server/src/main/webapp/WEB-INF/web.xml
+++ b/server/src/main/webapp/WEB-INF/web.xml
@@ -99,10 +99,20 @@
     <param-value>1</param-value>
   </context-param>
 
+  <!-- See https://github.com/jruby/jruby-rack#logging -->
+  <context-param>
+    <param-name>jruby.rack.logging</param-name>
+    <param-value>slf4j</param-value>
+  </context-param>
+  <context-param>
+    <param-name>jruby.rack.logging.name</param-name>
+    <param-value>org.jruby.rack.JRubyRack</param-value>
+  </context-param>
+
   <!-- jruby rack will buffer the output stream in memory, before it writes to disk.
   This writing to disk and then sending the contents over an http socket can cause significant performance overhead
   so we increase the buffer limit to 30mb.
-  See org.jruby.rack.servlet.RewindableInputStream -->
+  See org.jruby.rack.servlet.RewindableInputStream and https://github.com/jruby/jruby-rack#jruby-rack-configuration -->
   <context-param>
     <param-name>jruby.rack.request.size.maximum.bytes</param-name>
     <param-value>30000000</param-value>
