--- a/server/build.gradle
+++ b/server/build.gradle
@@ -809,6 +809,7 @@ task verifyWar(type: VerifyJarTask) {
         "jakarta.jms-api-2.0.3.jar",
         "jakarta.mail-api-${project.versions.jakartaMail}.jar",
         "jakarta.servlet-api-${project.versions.servletApi}.jar",
+        "jakarta.transaction-api-${project.versions.jakartaTransaction}.jar",
         "jakarta.xml.bind-api-4.0.0.jar",
         "javassist-${project.versions.javassist}.jar",
         "javax.inject-1.jar",
@@ -822,7 +823,6 @@ task verifyWar(type: VerifyJarTask) {
         "jruby-complete-${project.versions.jruby}.jar",
         "jruby-rack-${project.versions.rack}.jar",
         "json-utils-${project.versions.jolt}.jar",
-        "jta-1.1.jar",
         "liquibase-core-${project.versions.liquibase}.jar",
         "liquibase-slf4j-${project.versions.liquibaseSlf4j}.jar",
         "mybatis-${project.versions.mybatis}.jar",
