Remove Jetty Plus
We don't appear to use any of the plus/JNDI logic, so we should just remove it.

--- a/rack_hack/build.gradle
+++ b/rack_hack/build.gradle
@@ -20,6 +20,7 @@ dependencies {
   compileOnly project.deps.servletApi
   testImplementation project(path: ':test:test-utils', configuration: 'runtimeElements')
   testImplementation project.deps.mockitoCore
+  testImplementation project.deps.mockitoJunit5
   testImplementation project.deps.junit5Api
   testRuntimeOnly project.deps.junit5Engine
 }
