--- a/build.gradle
+++ b/build.gradle
@@ -150,8 +150,8 @@ project.ext.packaging = [
     feature: 17,
     interim: 0,    // set to `null` for the first release of a new featureVersion
     update : 8,    // set to `null` for the first release of a new featureVersion
-    patch  : null, // set to `null` for most releases. Patch releases are "exceptional".
-    build  : 7
+    patch  : 1,    // set to `null` for most releases. Patch releases are "exceptional".
+    build  : 1
   )
 ]
 
