--- a/server/src/main/webapp/WEB-INF/rails/package.json
+++ b/server/src/main/webapp/WEB-INF/rails/package.json
@@ -21,7 +21,7 @@
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.4.2",
-    "@shopify/draggable": "=1.0.0-beta.12",
+    "@shopify/draggable": "^1.0.0-beta.12",
     "angular": "file:node-vendor/angular",
     "awesomplete": "^1.1.5",
     "bourbon": "~7.1.0",
@@ -71,7 +71,7 @@
     "@types/underscore.string": "^0.0.39",
     "@types/url-parse": "^1.4.9",
     "@types/uuid": "^9.0.4",
-    "@types/webpack": "^4.41.34",
+    "@types/webpack": "^4.41.33",
     "add-matchers": "^0.6.2",
     "babel-loader": "^8.3.0",
     "cache-loader": "^4.1.0",
