Ensure webpack builds are clean when changing node_modules
In some cases the webpack cache at rails/tmp seems to contain stale files that need to be rebuilt
after a yarn install of new packages, which is currently not being done in some cases. Webpack 4's
cache-loader doesn't seem to detect that node_modules etc has changed and it should invalidate the
cache so I think we need to do it for it to avoid inconsistent local builds compared to a clean environment.

For now, if we decide to recompile assets via Gradle, we will do it without cache. Webpack in watch mode can
still rely on the cache. Another alternative is to make the cache clean conditional on yarn install having changes
but that might not be enough (e.g if .babelrc or tsconfig change are not detected) so let's just ensure things are clean.

--- a/server/rails.gradle
+++ b/server/rails.gradle
@@ -172,11 +172,14 @@ task compileAssetsWebpackDev(type: YarnRunTask) {
   workingDir = project.railsRoot
   destinationDir = project.file("${project.railsRoot}/public/assets/webpack")
   yarnCommand = ['webpack-dev', '--env', "outputDir=${destinationDir.toPath().toString()}", '--env', "licenseReportFile=${ext.licenseReportFile}"]
+
+  doFirst {
+    delete "${project.railsRoot}/tmp" // Clean the cacheDir from webpack/config/webpack.config.ts
+  }
 }
 
 task compileAssetsWebpackProd(type: YarnRunTask) {
-  dependsOn yarnInstall
-  dependsOn generateJSRoutes
+  dependsOn yarnInstall, generateJSRoutes
 
   onlyIf { !project.hasProperty('fastBuild') }
 
@@ -190,6 +193,10 @@ task compileAssetsWebpackProd(type: YarnRunTask) {
   workingDir = project.railsRoot
   destinationDir = project.file("${project.buildDir}/webpack-assets")
   yarnCommand = ['webpack-prod', '--env', "outputDir=${destinationDir.toPath().toString()}", '--env', "licenseReportFile=${ext.licenseReportFile}"]
+
+  doFirst {
+    delete "${project.railsRoot}/tmp" // Clean the cacheDir from webpack/config/webpack.config.ts
+  }
 }
 
 task compileAssetsRailsTest(type: ExecuteUnderRailsTask) {
