Ensure tasks are re-run appropriately after a change to config
- Yarn install tasks need to re-run after a yarn patch change
- webpack tasks need to re-run after a babel or typescript config change

--- a/server/rails.gradle
+++ b/server/rails.gradle
@@ -165,6 +165,8 @@ task compileAssetsWebpackDev(type: YarnRunTask) {
   ext.licenseReportFile = project.file("${project.buildDir}/reports/yarn-license/license-report.json")
   outputs.dir(ext.licenseReportFile.parentFile)
 
+  source(project.file("${project.railsRoot}/.babelrc"))
+  source(project.file("${project.railsRoot}/tsconfig.json"))
   source(project.file("${project.railsRoot}/webpack"))
   source(project.file("${project.railsRoot}/vendor/assets"))
   source(project.file("${project.railsRoot}/config"))
@@ -186,6 +188,8 @@ task compileAssetsWebpackProd(type: YarnRunTask) {
   ext.licenseReportFile = project.file("${project.buildDir}/reports/yarn-license/license-report.json")
   outputs.dir(ext.licenseReportFile.parentFile)
 
+  source(project.file("${project.railsRoot}/.babelrc"))
+  source(project.file("${project.railsRoot}/tsconfig.json"))
   source(project.file("${project.railsRoot}/webpack"))
   source(project.file("${project.railsRoot}/vendor/assets"))
   source(project.file("${project.railsRoot}/config"))
