Allow caniuse DB update by force transforming class properties
The caniuse DB update moved our Safari minimum to v15, which meant Babel no longer tried to transform class properties.
Unfortunately this seems to cause other unexplained issues with non-typescript files. Better to avoid issues with other
transitive dependency updates by transforming these for now.

--- a/server/src/main/webapp/WEB-INF/rails/.babelrc
+++ b/server/src/main/webapp/WEB-INF/rails/.babelrc
@@ -30,5 +30,8 @@
         "pragma": "m"
       }
     ]
-  ]
+  ],
+  // Workaround for "Module parse failed: Unexpected token" on class properties.
+  // Likely can be removed with Webpack 5.
+  "plugins": ["@babel/plugin-transform-class-properties"]
 }
