--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -175,11 +175,11 @@ final Map<String, String> v = [
   ztExec              : versionOf(libraries.ztExec),
 
   // misc
-  tanuki              : '3.5.54-st',
+  tanuki              : '3.5.54-st', // https://wrapper.tanukisoftware.com/doc/english/download.jsp#stable
   tanukiSha256sum     : '37cc32b74004c14651c5039d5e6491e1c0912570cf7706aa772a66c6ed69cbe6',
-  tfsSdk              : '14.137.0',
-  tfsSdkSha256sum     : '1f3a5a29b777511e06b5f88e8bea5a670426ee0e01a0e649f160bc493e306e91',
-  tini                : '0.19.0',
+  tfsSdk              : '14.138.0', // https://github.com/microsoft/team-explorer-everywhere/releases
+  tfsSdkSha256sum     : '89b417c181d8194bfbf64f3d6cc933b724429ff7b79ee38e7238e99c7dda1602',
+  tini                : '0.19.0', // https://github.com/krallin/tini/releases
 ]
 
 // While Dependabot won't be able to parse these deps, these will get upgraded for free anyway since they share versions
@@ -208,7 +208,6 @@ final Map<String, String> related = [
   mockitoJunit5           : "org.mockito:mockito-junit-jupiter",
   slf4jJcl                : "org.slf4j:jcl-over-slf4j:${v.slf4j}",
   slf4jJul                : "org.slf4j:jul-to-slf4j:${v.slf4j}",
-  slf4jLog4j              : "org.slf4j:log4j-over-slf4j:${v.slf4j}",
   springContext           : "org.springframework:spring-context:${v.spring}",
   springContextSupport    : "org.springframework:spring-context-support:${v.spring}",
   springOrm               : "org.springframework:spring-orm:${v.spring}",
