Prefer use of slf4j's BOM
Now SLF4J has a BOM we can use it to control transitive dependency versions properly/consistently with other libraries.

--- a/config/config-api/build.gradle
+++ b/config/config-api/build.gradle
@@ -33,7 +33,7 @@ dependencies {
   }
   api project.deps.cloning
   api project.deps.jdom
-  implementation project.deps.slf4j
+  implementation project.deps.slf4jApi
   implementation project.deps.felix
   implementation project.deps.guava
   implementation project.deps.jodaTime
