--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -93,7 +93,7 @@ final Map<String, String> libraries = [
   rack                : 'org.jruby.rack:jruby-rack:1.1.22',
   semanticVersion     : 'de.skuzzle:semantic-version:2.1.1',
   servletApi          : 'jakarta.servlet:jakarta.servlet-api:4.0.4', // Should be compatible with Jetty and Spring implementations
-  slf4j               : 'org.slf4j:slf4j-api:2.0.9',
+  slf4jBom            : 'org.slf4j:slf4j-bom:2.0.9',
   spark               : 'com.sparkjava:spark-core:2.7.2',
   spring              : 'org.springframework:spring-core:4.3.30.RELEASE',
   springSecurity      : 'org.springframework.security:spring-security-config:4.2.20.RELEASE',
@@ -165,7 +165,7 @@ final Map<String, String> v = [
   rack                : versionOf(libraries.rack),
   semanticVersion     : versionOf(libraries.semanticVersion),
   servletApi          : versionOf(libraries.servletApi),
-  slf4j               : versionOf(libraries.slf4j),
+  slf4jBom            : versionOf(libraries.slf4jBom),
   spark               : versionOf(libraries.spark),
   spring              : versionOf(libraries.spring),
   springSecurity      : versionOf(libraries.springSecurity),
@@ -206,8 +206,9 @@ final Map<String, String> related = [
   junit5Params            : "org.junit.jupiter:junit-jupiter-params",
   mockitoCore             : "org.mockito:mockito-core",
   mockitoJunit5           : "org.mockito:mockito-junit-jupiter",
-  slf4jJcl                : "org.slf4j:jcl-over-slf4j:${v.slf4j}",
-  slf4jJul                : "org.slf4j:jul-to-slf4j:${v.slf4j}",
+  slf4jApi                : "org.slf4j:slf4j-api",
+  slf4jJcl                : "org.slf4j:jcl-over-slf4j",
+  slf4jJul                : "org.slf4j:jul-to-slf4j",
   springContext           : "org.springframework:spring-context:${v.spring}",
   springContextSupport    : "org.springframework:spring-context-support:${v.spring}",
   springOrm               : "org.springframework:spring-orm:${v.spring}",
