--- a/agent/build.gradle
+++ b/agent/build.gradle
@@ -157,7 +157,7 @@ task verifyJar(type: VerifyJarTask) {
       "javax.inject-1.jar",
       "jaxb-core-${project.versions.jaxb}.jar",
       "jaxb-runtime-${project.versions.jaxb}.jar",
-      "jcl-over-slf4j-${project.versions.slf4j}.jar",
+      "jcl-over-slf4j-${project.versions.slf4jBom}.jar",
       "jcommander-${project.versions.jcommander}.jar",
       "jdom2-${project.versions.jdom}.jar",
       "jna-jpms-5.13.0.jar",
@@ -174,7 +174,7 @@ task verifyJar(type: VerifyJarTask) {
       "plugin-metadata-store-${project.version}.jar",
       "quartz-${project.versions.quartz}.jar",
       "semantic-version-${project.versions.semanticVersion}.jar",
-      "slf4j-api-${project.versions.slf4j}.jar",
+      "slf4j-api-${project.versions.slf4jBom}.jar",
       "spring-aop-${project.versions.spring}.jar",
       "spring-beans-${project.versions.spring}.jar",
       "spring-context-${project.versions.spring}.jar",
