--- a/build.gradle
+++ b/build.gradle
@@ -149,9 +149,9 @@ project.ext.packaging = [
   adoptiumJavaVersion: new AdoptiumVersion(
     feature: 17,
     interim: 0,    // set to `null` for the first release of a new featureVersion
-    update : 8,    // set to `null` for the first release of a new featureVersion
-    patch  : 1,    // set to `null` for most releases. Patch releases are "exceptional".
-    build  : 1
+    update : 9,    // set to `null` for the first release of a new featureVersion
+    patch  : null, // set to `null` for most releases. Patch releases are "exceptional".
+    build  : 9
   )
 ]
 
