Avoid need for dom4j within agents
XML representation via DOM4J is only used by a few feeds and not needed by entire server<->agent domain model

--- a/server/build.gradle
+++ b/server/build.gradle
@@ -264,6 +264,7 @@ dependencies {
     // Required for use of org.jdom2.xpath.XPathFactory where jaxen is the default impl
     api project.deps.jaxen
   }
+  api project.deps.dom4j
 
   implementation project.deps.jruby
   implementation project.deps.rack
